--- a/src/Integration.Vsix/packages.config
+++ b/src/Integration.Vsix/packages.config
@@ -38,6 +38,7 @@
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
   <package id="Microsoft.VSSDK.Vsixsigntool" version="15.0.26201" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="5.10.0.1302" targetFramework="net46" developmentDependency="true" />
   <package id="stdole" version="7.0.3300" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
