--- a/src/Integration.Vsix_2017/packages.config
+++ b/src/Integration.Vsix_2017/packages.config
@@ -42,6 +42,7 @@
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net46" />
   <package id="Microsoft.VSSDK.Vsixsigntool" version="15.0.26201" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="1.20.1" targetFramework="net46" developmentDependency="true" />
   <package id="stdole" version="7.0.3301" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
