--- a/src/ProgressVS_2017/ProgressVS.csproj
+++ b/src/ProgressVS_2017/ProgressVS.csproj
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>ProgressVS.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>$(ReferencedDirectory)\ProgressVS.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
