--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,4 +4,4 @@
 # https://help.github.com/articles/about-codeowners/
 
 # These owners will be the default owners for everything in the repo.
-* @SonarSource/dotnet @evangelink @valhristov @michalb-sonar
+* @SonarSource/dotnet @evangelink @valhristov @michalb-sonar @duncanp-sonar
