--- a/src/Integration.Vsix.UnitTests_2017/packages.config
+++ b/src/Integration.Vsix.UnitTests_2017/packages.config
@@ -6,6 +6,7 @@
   <package id="ManagedEsent" version="1.9.4" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Elfie" version="0.10.6" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
