--- a/src/SonarQube.Client/packages.config
+++ b/src/SonarQube.Client/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.2.0" targetFramework="net452" />
+  <package id="Grpc" version="1.4.1" targetFramework="net452" />
+  <package id="Grpc.Core" version="1.4.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net452" />
 </packages>
