--- a/src/SonarQube.Client.Tests/SonarQube.Client.Tests.csproj
+++ b/src/SonarQube.Client.Tests/SonarQube.Client.Tests.csproj
@@ -84,10 +84,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
+    <None Include="TestResources\IssuesProtobufResponse">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
