--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -453,7 +453,7 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="..\..\LICENSE">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="Resources\CommandIcons.png" />
@@ -463,7 +463,7 @@
     </Content>
     <None Include="Resources\sonarlint_32px.ico" />
     <Content Include="Resources\sonarlint_wave_128px.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="Telemetry\GeneratedCode\SqmVsCommands.vsct">
@@ -488,9 +488,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
-  <PropertyGroup>
-    <PostBuildEvent>copy /y "$(TargetDir)SonarLint.vsix" "$(SolutionDir)..\binaries\SonarLint.2015.vsix"</PostBuildEvent>
-  </PropertyGroup>
+  <Target Name="CopyVsixToBinaries" AfterTargets="Build" Inputs="$(TargetDir)SonarLint.vsix" Outputs="$(SolutionDir)..\binaries\SonarLint.2015.vsix">
+    <Copy OverwriteReadOnlyFiles="true" SourceFiles="$(TargetDir)SonarLint.vsix" DestinationFiles="$(SolutionDir)..\binaries\SonarLint.2015.vsix" />
+  </Target>
   <Import Project="..\..\packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets" Condition="Exists('..\..\packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -510,17 +510,8 @@
     <Message Text="Content: %(Content.Identity), IncludeInVSIX: %(Content.IncludeInVSIX)" Condition="$([System.Text.RegularExpressions.Regex]::IsMatch('%(Content.Identity)', '$(Grpc_Regex)'))" />
   </Target>
   <Import Project="..\..\packages\Microsoft.VSSDK.BuildTools.14.3.25407\build\Microsoft.VSSDK.BuildTools.targets" Condition="Exists('..\..\packages\Microsoft.VSSDK.BuildTools.14.3.25407\build\Microsoft.VSSDK.BuildTools.targets')" />
-  <PropertyGroup>
-    <PreBuildEvent>
-      cd $(ProjectDir)Protobuf
-      build.bat
-    </PreBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
+  <Target Name="GenerateProtobufClasses" BeforeTargets="PrepareForBuild" Outputs="$(ProjectDir)Protobuf\SonarlintDaemon.cs" Inputs="$(ProjectDir)Protobuf\sonarlint-daemon.proto">
+    <Message Importance="high" Text="Generating protobuf classes..." />
+    <Exec WorkingDirectory="$(ProjectDir)Protobuf" Command="build.bat" />
   </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
