Replacing the query string building with custom Json serialization

--- a/src/SonarQube.Client.Tests/packages.config
+++ b/src/SonarQube.Client.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="Castle.Core" version="4.1.1" targetFramework="net452" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net452" />
   <package id="Moq" version="4.7.99" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
 </packages>
