--- a/src/Integration.Vsix.UnitTests/packages.config
+++ b/src/Integration.Vsix.UnitTests/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="14.3.25407" targetFramework="net46" />
