--- a/src/SonarAnalyzerEmbedder/SonarAnalyzerEmbedder.VisualBasic.vbproj
+++ b/src/SonarAnalyzerEmbedder/SonarAnalyzerEmbedder.VisualBasic.vbproj
@@ -70,12 +70,14 @@
     <Compile Include="Empty.vb" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.SonarAnalyzerEmbedder.VisualBasic.config" />
+    <None Include="packages.SonarAnalyzerEmbedder.VisualBasic.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\..\packages\SonarAnalyzer.VisualBasic.6.4.0.3347\analyzers\Google.Protobuf.dll" />
-    <Analyzer Include="..\..\packages\SonarAnalyzer.VisualBasic.6.4.0.3347\analyzers\SonarAnalyzer.dll" />
-    <Analyzer Include="..\..\packages\SonarAnalyzer.VisualBasic.6.4.0.3347\analyzers\SonarAnalyzer.VisualBasic.dll" />
+    <Analyzer Include="..\..\packages\SonarAnalyzer.VisualBasic.6.5.0.3743\analyzers\Google.Protobuf.dll" />
+    <Analyzer Include="..\..\packages\SonarAnalyzer.VisualBasic.6.5.0.3743\analyzers\SonarAnalyzer.dll" />
+    <Analyzer Include="..\..\packages\SonarAnalyzer.VisualBasic.6.5.0.3743\analyzers\SonarAnalyzer.VisualBasic.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
